--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-query-int": "^2.0.0",
+    "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.12.4",
     "mongoose-paginate": "^5.0.3",
